gmymf-medusa/medusa-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gmymf-medusa
  namespace: gmymf-medusa
  labels:
    app: medusa
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 9000
      protocol: TCP
      name: http
  selector:
    app: medusa
