gmymf-medusa/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gmymf-medusa-redis
  namespace: gmymf-medusa
  labels:
    app: redis
spec:
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
      name: redis
  selector:
    app: redis
